<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Imagen -->
    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/energia"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Horas de sueño -->
    <EditText
        android:id="@+id/etHorasSueno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_horas"
        android:inputType="numberDecimal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/imgIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tazas de café -->
    <EditText
        android:id="@+id/etCafes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_cafes"
        android:inputType="number"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etHorasSueno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--Minutos de actividad física -->
    <EditText
        android:id="@+id/etActividadMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_actividad"
        android:inputType="number"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etCafes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón Calcular -->
    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/etActividadMin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Resultado -->
    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resultado_inicial"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnCalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
